--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     compile 'com.facebook.fresco:fresco:0.9.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
+    compile 'com.youth.banner:banner:1.4.9'
+
 }
