--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
+
     }
     buildTypes {
         release {
@@ -20,27 +21,27 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
-
     compile 'org.projectlombok:lombok:1.16.8'
-
     compile 'org.glassfish:javax.annotation:10.0-b28'
-
     compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
-
     compile 'com.facebook.fresco:fresco:0.9.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
     compile 'com.youth.banner:banner:1.4.9'
-
+    compile 'com.amap.api:map2d:latest.integration'
+    compile 'com.amap.api:navi-3dmap:latest.integration'
+    compile 'com.amap.api:search:latest.integration'
+    compile 'com.amap.api:location:latest.integration'
+//    implementation files('libs/Amap_2DMap_V5.2.0_20170627.jar')
+//    implementation files('libs/AMap_Search_V6.1.0_20180330.jar')
+//    implementation files('libs/Android_Map3D_SDK_V6.3.0_20180619.jar')
 }
