--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     compile 'com.amap.api:location:latest.integration'
     // https://mvnrepository.com/artifact/com.alibaba/fastjson
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.47'
+    // https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
+    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.4.1'
+
 
 //    implementation files('libs/Amap_2DMap_V5.2.0_20170627.jar')
 //    implementation files('libs/AMap_Search_V6.1.0_20180330.jar')
