--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,13 @@
 
         <activity
             android:name=".Activity.MainActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".Activity.JoinUsActivity" />
         <activity android:name=".Activity.BusinessActivity" />
 
@@ -75,14 +81,9 @@
 
         <activity android:name=".Activity.MapBusinessActivity" />
 
-        <activity android:name=".Activity.LoginActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity
+            android:name=".Activity.LoginActivity"
+            android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
