--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,10 @@ dependencies {
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.47'
     // https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
     compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.4.1'
+    //noinspection GradleCompatible
     compile 'com.android.support:gridlayout-v7:22.+'
+
+    dependencies { compile files('F:\\00project\\zjb\\code\\server\\data2.0\\data20\\target\\data2.0-1.0-SNAPSHOT.jar')}
 
 //    implementation files('libs/Amap_2DMap_V5.2.0_20170627.jar')
 //    implementation files('libs/AMap_Search_V6.1.0_20180330.jar')
