--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,7 +67,7 @@
             android:name=".Activity.MainActivity"
             android:label="@string/app_name" />
         <activity android:name=".Activity.JoinUsActivity" />
-        <activity android:name=".Activity.BusinessActivity" />
+        <activity android:name=".Activity.CreateStoreActivity" />
 
         <meta-data
             android:name="com.amap.api.v2.apikey"
@@ -101,7 +101,8 @@
         </activity>
         <activity android:name=".Activity.MyTeamActivity" />
         <activity android:name=".Activity.PlaceListActivity" />
-        <activity android:name=".Activity.TeamActivity"></activity>
+        <activity android:name=".Activity.TeamActivity" />
+        <activity android:name=".Activity.AdvertisingActivity"></activity>
     </application>
 
 </manifest>
