--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -108,8 +108,17 @@
         <activity
             android:name=".Activity.GameInfoActivity"
             android:label="@string/title_activity_game_info"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:launchMode="singleTask">
+            android:launchMode="singleTask"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Activity.GameWorldActivity"
+            android:label="@string/title_activity_game_world"
+            android:launchMode="singleTask"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".GamePart.DeepForest.DeepForestGameMainActivity"
+            android:label="@string/title_activity_deep_forest_game_main"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -117,10 +126,41 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activity.GameWorldActivity"
-            android:label="@string/title_activity_game_world"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:launchMode="singleTask"></activity>
+            android:name=".GamePart.DeepForest.DeepForestGameTacticsActivity"
+            android:label="@string/title_activity_deep_forest_game_tactics"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".GamePart.DeepForest.DeepForestGameTacticsAttactActivity"
+            android:label="@string/title_activity_deep_forest_game_tactics_attact"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".GamePart.DeepForest.DeepForestGameTacticsDefenceActivity"
+            android:label="@string/title_activity_deep_forest_game_tactics_defence"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".GamePart.DeepForest.DeepForestGameTacticsMoveActivity"
+            android:label="@string/title_activity_deep_forest_game_tactics_move"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".GamePart.DeepForest.DeepForestGameTacticsExploreActivity"
+            android:label="@string/title_activity_deep_forest_game_tactics_explore"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".GamePart.DeepForest.DeepForestGameTacticsSettleActivity"
+            android:label="@string/title_activity_deep_forest_game_tactics_settle"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".GamePart.DeepForest.DeepForestGameMessageInfoActivity"
+            android:label="@string/title_activity_deep_forest_game_message_info"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".GamePart.DeepForest.DeepForestGameMessageInfoCarmeraActivity"
+            android:label="@string/title_activity_deep_forest_game_message_info_carmera"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".GamePart.DeepForest.DeepForestGameBusinessActivity"
+            android:label="@string/title_activity_deep_forest_game_business"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
