--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,30 +4,34 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "renchaigao.com.zujuba"
-        minSdkVersion 24
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
+        vectorDrawables.useSupportLibrary = true
 
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+        }                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
     }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+//    implementation 'com.android.support:appcompat-v7:21.0.3'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+//    testImplementation
+//        'junit:junit:4.12'
+//    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+//    androidTestImplementation
+//        'com.android.support.test.espresso:espresso-core:3.0.2'
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'org.projectlombok:lombok:1.16.8'
@@ -48,10 +52,14 @@ dependencies {
     //noinspection GradleCompatible
     compile 'com.android.support:gridlayout-v7:22.+'
 
-//    dependencies { compile files('F:\\00project\\zjb\\code\\server\\data2.0\\data20\\target\\data2.0-1.0-SNAPSHOT.jar')}
-//    dependencies { compile files('F:\\00project\\zjb\\code\\server\\data2.0\\merge\\target\\merge-1.0-SNAPSHOT.jar')}
-    dependencies { compile files('/mac/project/zjb/code/servers/merge/target/merge-1.0-SNAPSHOT.jar')}
-    dependencies { compile files('/mac/project/zjb/code/servers/data20/target/data2.0-1.0-SNAPSHOT.jar')}
+    // https://mvnrepository.com/artifact/org.litepal.android/core
+    compile group: 'org.litepal.android', name: 'core', version: '1.5.1'
+
+
+    dependencies { compile files('F:\\00project\\zjb\\code\\server\\data2.0\\data20\\target\\data2.0-1.0-SNAPSHOT.jar')}
+    dependencies { compile files('F:\\00project\\zjb\\code\\server\\data2.0\\merge\\target\\merge-1.0-SNAPSHOT.jar')}
+//    dependencies { compile files('/mac/project/zjb/code/servers/merge/target/merge-1.0-SNAPSHOT.jar')}
+//    dependencies { compile files('/mac/project/zjb/code/servers/data20/target/data2.0-1.0-SNAPSHOT.jar')}
 //    implementation files('libs/Amap_2DMap_V5.2.0_20170627.jar')
 //    implementation files('libs/AMap_Search_V6.1.0_20180330.jar')
 //    implementation files('libs/Android_Map3D_SDK_V6.3.0_20180619.jar')
