--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
+        }
     }
 }
 
@@ -31,7 +31,7 @@ dependencies {
 //        'junit:junit:4.12'
 //    androidTestImplementation 'com.android.support.test:runner:1.0.2'
 //    androidTestImplementation
-//        'com.android.support.test.espresso:espresso-core:3.0.2'
+    //        'com.android.support.test.espresso:espresso-core:3.0.2'
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'org.projectlombok:lombok:1.16.8'
@@ -53,11 +53,15 @@ dependencies {
     compile 'com.android.support:gridlayout-v7:22.+'
 
     // https://mvnrepository.com/artifact/org.litepal.android/core
-    compile group: 'org.litepal.android', name: 'core', version: '1.5.1'
+    compile group: 'org.litepal.android', name: 'core', version: '2.0.0'
 
 
-    dependencies { compile files('F:\\00project\\zjb\\code\\server\\data2.0\\data20\\target\\data2.0-1.0-SNAPSHOT.jar')}
-    dependencies { compile files('F:\\00project\\zjb\\code\\server\\data2.0\\merge\\target\\merge-1.0-SNAPSHOT.jar')}
+    dependencies {
+        compile files('F:\\00project\\zjb\\code\\server\\data2.0\\data20\\target\\data2.0-1.0-SNAPSHOT.jar')
+    }
+    dependencies {
+        compile files('F:\\00project\\zjb\\code\\server\\data2.0\\merge\\target\\merge-1.0-SNAPSHOT.jar')
+    }
 //    dependencies { compile files('/mac/project/zjb/code/servers/merge/target/merge-1.0-SNAPSHOT.jar')}
 //    dependencies { compile files('/mac/project/zjb/code/servers/data20/target/data2.0-1.0-SNAPSHOT.jar')}
 //    implementation files('libs/Amap_2DMap_V5.2.0_20170627.jar')
